Review papers: Kjaergaard and Bloch.

--- a/source/biblio/reviews.bib
+++ b/source/biblio/reviews.bib
@@ -1,3 +1,31 @@
+@article{Bloch_2008,
+   title={Many-body physics with ultracold gases},
+   volume={80},
+   ISSN={1539-0756},
+   url={http://dx.doi.org/10.1103/RevModPhys.80.885},
+   DOI={10.1103/revmodphys.80.885},
+   number={3},
+   journal={Reviews of Modern Physics},
+   publisher={American Physical Society (APS)},
+   author={Bloch, I. and Dalibard, J. and Zwerger, W.},
+   year={2008},
+   month={Jul},
+   pages={885–964}
+},
+@article{Kjaergaard_2020,
+   title={Superconducting Qubits: Current State of Play},
+   volume={11},
+   ISSN={1947-5462},
+   url={http://dx.doi.org/10.1146/annurev-conmatphys-031119-050605},
+   DOI={10.1146/annurev-conmatphys-031119-050605},
+   number={1},
+   journal={Annual Review of Condensed Matter Physics},
+   publisher={Annual Reviews},
+   author={Kjaergaard, M. and Schwartz, M. E. and Braumüller, J. and Krantz, P. and Wang, J. I.-J. and Gustavsson, S. and Oliver, W. D.},
+   year={2020},
+   month={Mar},
+   pages={369–395}
+},
 @article{Krantz2019,
    title={A quantum engineer’s guide to superconducting qubits},
    volume={6},
