Online resources ; reviewed, annotated the story.

--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -12,3 +12,16 @@
   doi = {10.1103/RevModPhys.75.715},
   url = {https://link.aps.org/doi/10.1103/RevModPhys.75.715}
 }
+@article{LaRose2019,
+  doi = {10.22331/q-2019-03-25-130},
+  url = {https://doi.org/10.22331/q-2019-03-25-130},
+  title = {Overview and {C}omparison of {G}ate {L}evel {Q}uantum {S}oftware {P}latforms},
+  author = {LaRose, Ryan},
+  journal = {{Quantum}},
+  issn = {2521-327X},
+  publisher = {{Verein zur F{\"{o}}rderung des Open Access Publizierens in den Quantenwissenschaften}},
+  volume = {3},
+  pages = {130},
+  month = mar,
+  year = {2019}
+}
