--- a/source/biblio/lectures.bib
+++ b/source/biblio/lectures.bib
@@ -14,3 +14,12 @@
     HOWPUBLISHED = {Lectures in Quantum Science and Technology at Technical University of Munich},
     URL={https://www.ph.tum.de/academics/org/cc/mh/PH1010/}
 },
+@MISC{Jirauschek2019,
+    author={Jirauschek, Christian},
+    year={2019},
+    month={Jul},
+    Title={Zentrum für {Q}uanten{E}ngineering ({ZQE}) {G}arching},
+    journal={Industry Day},
+    place={Munich},
+    URL={https://wiki.tum.de/download/attachments/251625503/IndustryDay_Jirauschek.pdf}
+}
