--- a/source/biblio/reviews.bib
+++ b/source/biblio/reviews.bib
@@ -12,6 +12,20 @@
    month={Jul},
    pages={885–964}
 },
+@article{Browaeys_2020,
+   title={Many-body physics with individually controlled Rydberg atoms},
+   volume={16},
+   ISSN={1745-2481},
+   url={http://dx.doi.org/10.1038/s41567-019-0733-z},
+   DOI={10.1038/s41567-019-0733-z},
+   number={2},
+   journal={Nature Physics},
+   publisher={Springer Science and Business Media LLC},
+   author={Browaeys, Antoine and Lahaye, Thierry},
+   year={2020},
+   month={Jan},
+   pages={132–142}
+},
 @article{Kjaergaard_2020,
    title={Superconducting Qubits: Current State of Play},
    volume={11},
@@ -26,7 +40,7 @@
    month={Mar},
    pages={369–395}
 },
-@article{Krantz2019,
+@article{Krantz_2019,
    title={A quantum engineer’s guide to superconducting qubits},
    volume={6},
    ISSN={1931-9401},
