Rough list of contents of intro.

--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -1,16 +1,15 @@
-@article{Zurek2003,
-  title = {Decoherence, einselection, and the quantum origins of the classical},
-  author = {Zurek, Wojciech Hubert},
-  journal = {Rev. Mod. Phys.},
-  volume = {75},
-  issue = {3},
-  pages = {715--775},
-  numpages = {0},
-  year = {2003},
-  month = {May},
-  publisher = {American Physical Society},
-  doi = {10.1103/RevModPhys.75.715},
-  url = {https://link.aps.org/doi/10.1103/RevModPhys.75.715}
+@article{Gambetta_2017,
+   title={Building logical qubits in a superconducting quantum computing system},
+   volume={3},
+   ISSN={2056-6387},
+   url={http://dx.doi.org/10.1038/s41534-016-0004-0},
+   DOI={10.1038/s41534-016-0004-0},
+   number={1},
+   journal={npj Quantum Information},
+   publisher={Springer Science and Business Media LLC},
+   author={Gambetta, Jay M. and Chow, Jerry M. and Steffen, Matthias},
+   year={2017},
+   month={Jan}
 }
 @article{LaRose2019,
   doi = {10.22331/q-2019-03-25-130},
@@ -24,4 +23,18 @@
   pages = {130},
   month = mar,
   year = {2019}
+}
+@article{Zurek2003,
+  title = {Decoherence, einselection, and the quantum origins of the classical},
+  author = {Zurek, Wojciech Hubert},
+  journal = {Rev. Mod. Phys.},
+  volume = {75},
+  issue = {3},
+  pages = {715--775},
+  numpages = {0},
+  year = {2003},
+  month = {May},
+  publisher = {American Physical Society},
+  doi = {10.1103/RevModPhys.75.715},
+  url = {https://link.aps.org/doi/10.1103/RevModPhys.75.715}
 }
