EPR experiments: contents with references.

--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -1,8 +1,73 @@
+@article{Aspect_1980,
+  title = {Absolute measurement of an atomic cascade rate using a two photon coincidence technique. {A}pplication to the 4p21{S}0 -4s4p 1{P}1 -4s21{S}0 cascade of calcium excited by a two photon absorption},
+  journal = {Optics Communications},
+  volume = {34},
+  number = {1},
+  pages = {46-52},
+  year = {1980},
+  issn = {0030-4018},
+  doi = {10.1016/0030-4018(80)90157-1},
+  author = {A. Aspect and C. Imbert and G. Roger},
+}
+@article{Aspect_1981,
+  title = {Experimental Tests of Realistic Local Theories via Bell's Theorem},
+  author = {Aspect, Alain and Grangier, Philippe and Roger, G\'erard},
+  journal = {Phys. Rev. Lett.},
+  volume = {47},
+  issue = {7},
+  pages = {460--463},
+  numpages = {0},
+  year = {1981},
+  month = {Aug},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.47.460}
+}
+@article{Aspect_1982a,
+  title = {Experimental Realization of Einstein-Podolsky-Rosen-Bohm Gedankenexperiment: A New Violation of Bell's Inequalities},
+  author = {Aspect, Alain and Grangier, Philippe and Roger, G\'erard},
+  journal = {Phys. Rev. Lett.},
+  volume = {49},
+  issue = {2},
+  pages = {91--94},
+  numpages = {0},
+  year = {1982},
+  month = {Jul},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.49.91},
+  url = {https://www.researchgate.net/publication/228109475_Experimental_Realization_of_Einstein-Podolsky-Rosen-Bohm_Gedankenexperiment_A_New_Violation_of_Bell%27s_Inequalities}
+}
+@article{Aspect_1982b,
+  title = {Experimental Test of Bell's Inequalities Using Time-Varying Analyzers},
+  author = {Aspect, Alain and Dalibard, Jean and Roger, G\'erard},
+  journal = {Phys. Rev. Lett.},
+  volume = {49},
+  issue = {25},
+  pages = {1804--1807},
+  numpages = {0},
+  year = {1982},
+  month = {Dec},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.49.1804},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.49.1804}
+}
+@article{BIGBell2018,
+   title={Challenging local realism with human choices},
+   author={BIG Bell Test Collaboration},
+   volume={557},
+   ISSN={1476-4687},
+   url={https://arxiv.org/abs/1805.04431},
+   DOI={10.1038/s41586-018-0085-3},
+   number={7704},
+   journal={Nature},
+   publisher={Springer Science and Business Media LLC},
+   year={2018},
+   month={May},
+   pages={212–216}
+}
 @article{Gambetta_2017,
    title={Building logical qubits in a superconducting quantum computing system},
    volume={3},
    ISSN={2056-6387},
-   url={http://dx.doi.org/10.1038/s41534-016-0004-0},
    DOI={10.1038/s41534-016-0004-0},
    number={1},
    journal={npj Quantum Information},
@@ -11,9 +76,63 @@
    year={2017},
    month={Jan}
 }
+@article{Ghosh_1987,
+  title = {Observation of nonclassical effects in the interference of two photons},
+  author = {Ghosh, R. and Mandel, L.},
+  journal = {Phys. Rev. Lett.},
+  volume = {59},
+  issue = {17},
+  pages = {1903--1905},
+  numpages = {0},
+  year = {1987},
+  month = {Oct},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.59.1903}
+}
+@article{Giustina_2015,
+  title = {Significant-Loophole-Free Test of Bell's Theorem with Entangled Photons},
+  author = {Giustina, Marissa and Versteegh, Marijn A. M. and Wengerowsky, S\"oren and others},
+  journal = {Phys. Rev. Lett.},
+  volume = {115},
+  issue = {25},
+  pages = {250401},
+  numpages = {7},
+  year = {2015},
+  month = {Dec},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.115.250401},
+  url = {https://arxiv.org/abs/1511.03190}
+}
+@article{Hensen_2015,
+  title = {Loophole-free Bell inequality violation using electron spins separated by 1.3 kilometres},
+  author = {Hensen, B. and Bernien, H. and Dréau, A. and others},
+  journal = {Nature},
+  volume = {526},
+  issue = {7575},
+  pages = {682–686},
+  year = {2015},
+  month = {Oct},
+  publisher = {American Physical Society},
+  doi = {10.1038/nature15759},
+  url = {https://arxiv.org/abs/1508.05949}
+}
+@article{Kwiat_1995,
+  title = {New High-Intensity Source of Polarization-Entangled Photon Pairs},
+  author = {Kwiat, Paul G. and Mattle, Klaus and Weinfurter, Harald and Zeilinger, Anton and Sergienko, Alexander V. and Shih, Yanhua},
+  journal = {Phys. Rev. Lett.},
+  volume = {75},
+  issue = {24},
+  pages = {4337--4341},
+  numpages = {0},
+  year = {1995},
+  month = {Dec},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.75.4337},
+  url = {https://www.researchgate.net/publication/13230395_New_High-Intensity_Source_of_Polarization-Entangled_Photon_Pairs}
+}
 @article{LaRose2019,
   doi = {10.22331/q-2019-03-25-130},
-  url = {https://doi.org/10.22331/q-2019-03-25-130},
+  url = {https://arxiv.org/abs/1807.02500},
   title = {Overview and {C}omparison of {G}ate {L}evel {Q}uantum {S}oftware {P}latforms},
   author = {LaRose, Ryan},
   journal = {{Quantum}},
@@ -23,6 +142,34 @@
   pages = {130},
   month = mar,
   year = {2019}
+}
+@article{Shalm_2015,
+  title = {Strong Loophole-Free Test of Local Realism},
+  author = {Shalm, Lynden K. and Meyer-Scott, Evan and Christensen, Bradley G. and others},
+  journal = {Phys. Rev. Lett.},
+  volume = {115},
+  issue = {25},
+  pages = {250402},
+  numpages = {10},
+  year = {2015},
+  month = {Dec},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.115.250402},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.115.250402}
+}
+@article{Weihs_1998,
+  title = {Violation of Bell's Inequality under Strict Einstein Locality Conditions},
+  author = {Weihs, Gregor and Jennewein, Thomas and Simon, Christoph and Weinfurter, Harald and Zeilinger, Anton},
+  journal = {Phys. Rev. Lett.},
+  volume = {81},
+  issue = {23},
+  pages = {5039--5043},
+  numpages = {0},
+  year = {1998},
+  month = {Dec},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.81.5039},
+  url = {https://arxiv.org/abs/quant-ph/9810080}
 }
 @article{Zurek2003,
   title = {Decoherence, einselection, and the quantum origins of the classical},
@@ -36,5 +183,5 @@
   month = {May},
   publisher = {American Physical Society},
   doi = {10.1103/RevModPhys.75.715},
-  url = {https://link.aps.org/doi/10.1103/RevModPhys.75.715}
+  url = {https://arxiv.org/abs/quant-ph/0105127}
 }
