Plenty of review papers for computing and simulation.

--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -1,3 +1,15 @@
+@article{Ansaloni_2020,
+  doi = {10.1038/s41467-020-20280-3},
+  url = {https://www.nature.com/articles/s41467-020-20280-3.pdf},
+  year = {2020},
+  month = dec,
+  publisher = {Springer Science and Business Media {LLC}},
+  volume = {11},
+  number = {1},
+  author = {Fabio Ansaloni and Anasua Chatterjee and Heorhii Bohuslavskyi and Benoit Bertrand and Louis Hutin and Maud Vinet and Ferdinand Kuemmeth},
+  title = {Single-electron operations in a foundry-fabricated array of quantum dots},
+  journal = {Nature Communications}
+}
 @article{Aspect_1980,
   title = {Absolute measurement of an atomic cascade rate using a two photon coincidence technique. {A}pplication to the 4p21{S}0 -4s4p 1{P}1 -4s21{S}0 cascade of calcium excited by a two photon absorption},
   journal = {Optics Communications},
@@ -50,7 +62,7 @@
   doi = {10.1103/PhysRevLett.49.1804},
   url = {https://link.aps.org/doi/10.1103/PhysRevLett.49.1804}
 }
-@article{BIGBell2018,
+@article{BIGBell_2018,
    title={Challenging local realism with human choices},
    author={BIG Bell Test Collaboration},
    volume={557},
@@ -92,6 +104,7 @@
 @article{Giustina_2015,
   title = {Significant-Loophole-Free Test of Bell's Theorem with Entangled Photons},
   author = {Giustina, Marissa and Versteegh, Marijn A. M. and Wengerowsky, S\"oren and others},
+  authors = {Marissa Giustina and Marijn A.{\hspace{0.167em}}M. Versteegh and S\"{o}ren Wengerowsky and Johannes Handsteiner and Armin Hochrainer and Kevin Phelan and Fabian Steinlechner and Johannes Kofler and Jan-{\AA}ke Larsson and Carlos Abell{\'{a}}n and Waldimar Amaya and Valerio Pruneri and Morgan W. Mitchell and J\"{o}rn Beyer and Thomas Gerrits and Adriana E. Lita and Lynden K. Shalm and Sae Woo Nam and Thomas Scheidl and Rupert Ursin and Bernhard Wittmann and Anton Zeilinger},
   journal = {Phys. Rev. Lett.},
   volume = {115},
   issue = {25},
@@ -104,17 +117,17 @@
   url = {https://arxiv.org/abs/1511.03190}
 }
 @article{Hensen_2015,
-  title = {Loophole-free Bell inequality violation using electron spins separated by 1.3 kilometres},
-  author = {Hensen, B. and Bernien, H. and Dréau, A. and others},
-  journal = {Nature},
-  volume = {526},
-  issue = {7575},
-  pages = {682–686},
-  year = {2015},
-  month = {Oct},
-  publisher = {American Physical Society},
   doi = {10.1038/nature15759},
-  url = {https://arxiv.org/abs/1508.05949}
+  url = {https://arxiv.org/abs/1508.05949},
+  year = {2015},
+  month = oct,
+  publisher = {Springer Science and Business Media {LLC}},
+  volume = {526},
+  number = {7575},
+  pages = {682--686},
+  author = {B. Hensen and H. Bernien and A. E. Dr{\'{e}}au and A. Reiserer and N. Kalb and M. S. Blok and J. Ruitenberg and R. F. L. Vermeulen and R. N. Schouten and C. Abell{\'{a}}n and W. Amaya and V. Pruneri and M. W. Mitchell and M. Markham and D. J. Twitchen and D. Elkouss and S. Wehner and T. H. Taminiau and R. Hanson},
+  title = {Loophole-free Bell inequality violation using electron spins separated by 1.3 kilometres},
+  journal = {Nature}
 }
 @article{Kwiat_1995,
   title = {New High-Intensity Source of Polarization-Entangled Photon Pairs},
@@ -130,7 +143,7 @@
   doi = {10.1103/PhysRevLett.75.4337},
   url = {https://www.researchgate.net/publication/13230395_New_High-Intensity_Source_of_Polarization-Entangled_Photon_Pairs}
 }
-@article{LaRose2019,
+@article{LaRose_2019,
   doi = {10.22331/q-2019-03-25-130},
   url = {https://arxiv.org/abs/1807.02500},
   title = {Overview and {C}omparison of {G}ate {L}evel {Q}uantum {S}oftware {P}latforms},
@@ -143,9 +156,36 @@
   month = mar,
   year = {2019}
 }
+@article{Loss_1998,
+  doi = {10.1103/physreva.57.120},
+  url = {https://journals.aps.org/pra/pdf/10.1103/PhysRevA.57.120},
+  year = {1998},
+  month = jan,
+  publisher = {American Physical Society ({APS})},
+  volume = {57},
+  number = {1},
+  pages = {120--126},
+  author = {Daniel Loss and David P. DiVincenzo},
+  title = {Quantum computation with quantum dots},
+  journal = {Physical Review A}
+}
+@article{Petit_2020,
+  doi = {10.1038/s41586-020-2170-7},
+  url = {https://www.researchgate.net/publication/336510543_Universal_quantum_logic_in_hot_silicon_qubits},
+  year = {2020},
+  month = apr,
+  publisher = {Springer Science and Business Media {LLC}},
+  volume = {580},
+  number = {7803},
+  pages = {355--359},
+  author = {L. Petit and H. G. J. Eenink and M. Russ and W. I. L. Lawrie and N. W. Hendrickx and S. G. J. Philips and J. S. Clarke and L. M. K. Vandersypen and M. Veldhorst},
+  title = {Universal quantum logic in hot silicon qubits},
+  journal = {Nature}
+}
 @article{Shalm_2015,
   title = {Strong Loophole-Free Test of Local Realism},
   author = {Shalm, Lynden K. and Meyer-Scott, Evan and Christensen, Bradley G. and others},
+  authors = {Shalm, Lynden K. and Meyer-Scott, Evan and Christensen, Bradley G. and Bierhorst, Peter and Wayne, Michael A. and Stevens, Martin J. and Gerrits, Thomas and Glancy, Scott and Hamel, Deny R. and Allman, Michael S. and Coakley, Kevin J. and Dyer, Shellee D. and Hodge, Carson and Lita, Adriana E. and Verma, Varun B. and Lambrocco, Camilla and Tortorici, Edward and Migdall, Alan L. and Zhang, Yanbao and Kumor, Daniel R. and Farr, William H. and Marsili, Francesco and Shaw, Matthew D. and Stern, Jeffrey A. and Abell\'an, Carlos and Amaya, Waldimar and Pruneri, Valerio and Jennewein, Thomas and Mitchell, Morgan W. and Kwiat, Paul G. and Bienfang, Joshua C. and Mirin, Richard P. and Knill, Emanuel and Nam, Sae Woo},
   journal = {Phys. Rev. Lett.},
   volume = {115},
   issue = {25},
