--- a/source/biblio/misc.bib
+++ b/source/biblio/misc.bib
@@ -8,7 +8,16 @@
   publisher = {American Physical Society},
   url = {https://physics.aps.org/articles/v8/123},
 }
-@MISC{Jirauschek2019,
+@MISC{Clarke_2020,
+    author={Clarke, James},
+    year={2020},
+    month={Aug},
+    Title={Towards a Large-scale Quantum Computer Using Silicon Spin Qubits},
+    journal={Hot Chips 32 Conference},
+    howpublished={"Hot Chips 32" Conference Archive},
+    URL={https://hotchips.org/archives/hc32/}
+}
+@MISC{Jirauschek_2019,
     author={Jirauschek, Christian},
     year={2019},
     month={Jul},
@@ -16,4 +25,26 @@
     journal={Industry Day},
     place={Munich},
     URL={https://wiki.tum.de/download/attachments/251625503/IndustryDay_Jirauschek.pdf}
+}
+@incollection{Meyer_2009,
+  author      = "Meyer, Carola",
+  title       = "Quantum computing with semiconductor quantum dots",
+  editor      = "Blügel, S. and Morgenstern, M. and Bürgler, D. and Schneider, C. M. and Waser, R.",
+  booktitle   = "Spintronics - from GMR to quantum information: lecture notes of the 40th spring school 2009",
+  ISBN = {978-3-893-36559-3},
+  publisher   = "Forschungszentrum Jülich Zentralbibliothek",
+  address = {Jülich},
+  year        = 2009,
+  chapter     = {X5},
+  doi = {2128/3592},
+  url = {https://www.fz-juelich.de/SharedDocs/Downloads/PGI/PGI-6/EN/meyer_004.pdf}
+}
+@article{Russell_2020,
+ author  = {Russell, John},
+ year = {2020},
+ date    = {2020-08-19},
+ title   = {Intel Connects the (Quantum) Dots in Accelerating Quantum Computing Effort},
+ journal = {HPC wire},
+ url     = {https://www.hpcwire.com/2020/08/19/intel-connects-the-quantum-dots-in-accelerating-quantum-computing-effort/},
+ urldate = {2021-04-03}
 }
