--- a/source/biblio/reviews.bib
+++ b/source/biblio/reviews.bib
@@ -1,9 +1,22 @@
+@article{Altman_2021,
+  doi = {10.1103/prxquantum.2.017003},
+  eprint = {1912.06938},
+  year = {2021},
+  month = feb,
+  publisher = {American Physical Society ({APS})},
+  volume = {2},
+  number = {1},
+  author = {Ehud Altman and Kenneth R. Brown and Giuseppe Carleo and others},
+  authors = {Ehud Altman and Kenneth R. Brown and Giuseppe Carleo and Lincoln D. Carr and Eugene Demler and Cheng Chin and Brian DeMarco and Sophia E. Economou and Mark A. Eriksson and Kai-Mei C. Fu and Markus Greiner and Kaden R.A. Hazzard and Randall G. Hulet and Alicia J. Koll{\'{a}}r and Benjamin L. Lev and Mikhail D. Lukin and Ruichao Ma and Xiao Mi and Shashank Misra and Christopher Monroe and Kater Murch and Zaira Nazario and Kang-Kuen Ni and Andrew C. Potter and Pedram Roushan and Mark Saffman and Monika Schleier-Smith and Irfan Siddiqi and Raymond Simmonds and Meenakshi Singh and I.B. Spielman and Kristan Temme and David S. Weiss and Jelena Vu{\v{c}}kovi{\'{c}} and Vladan Vuleti{\'{c}} and Jun Ye and Martin Zwierlein},
+  title = {Quantum Simulators: Architectures and Opportunities},
+  journal = {{PRX} Quantum}
+}
 @article{Bloch_2008,
    title={Many-body physics with ultracold gases},
    volume={80},
    ISSN={1539-0756},
-   url={http://dx.doi.org/10.1103/RevModPhys.80.885},
    DOI={10.1103/revmodphys.80.885},
+   eprint={0704.3011},
    number={3},
    journal={Reviews of Modern Physics},
    publisher={American Physical Society (APS)},
@@ -11,9 +24,23 @@
    year={2008},
    month={Jul},
    pages={885–964}
-},
+}
+@article{Bloch_2012,
+  title = {Quantum simulations with ultracold quantum gases},
+  author = {Immanuel Bloch and Jean Dalibard and Sylvain Nascimb{\`{e}}ne},
+  doi = {10.1038/nphys2259},
+  url = {https://www.researchgate.net/publication/232773948_Quantum_Simulations_with_Ultracold_Quantum_Gases},
+  year = {2012},
+  month = apr,
+  publisher = {Springer Science and Business Media {LLC}},
+  volume = {8},
+  number = {4},
+  pages = {267--276},
+  journal = {Nature Physics}
+}
 @article{Browaeys_2020,
    title={Many-body physics with individually controlled Rydberg atoms},
+   author={Browaeys, Antoine and Lahaye, Thierry},
    volume={16},
    ISSN={1745-2481},
    url={http://dx.doi.org/10.1038/s41567-019-0733-z},
@@ -21,11 +48,37 @@
    number={2},
    journal={Nature Physics},
    publisher={Springer Science and Business Media LLC},
-   author={Browaeys, Antoine and Lahaye, Thierry},
    year={2020},
    month={Jan},
    pages={132–142}
 },
+@article{Georgescu_2014,
+  title = {Quantum simulation},
+  author = {Georgescu, I. M. and Ashhab, S. and Nori, Franco},
+  journal = {Rev. Mod. Phys.},
+  volume = {86},
+  issue = {1},
+  pages = {153--185},
+  numpages = {33},
+  year = {2014},
+  month = {Mar},
+  publisher = {American Physical Society},
+  doi = {10.1103/RevModPhys.86.153},
+  url = {https://www.researchgate.net/publication/256187028_Quantum_Simulation}
+}
+@article{Kassal_2011,
+  title = {Simulating Chemistry Using Quantum Computers},
+  author = {Ivan Kassal and James D. Whitfield and Alejandro Perdomo-Ortiz and Man-Hong Yung and Al{\'{a}}n Aspuru-Guzik},
+  doi = {10.1146/annurev-physchem-032210-103512},
+  eprint = {1007.2648},
+  year = {2011},
+  month = may,
+  publisher = {Annual Reviews},
+  volume = {62},
+  number = {1},
+  pages = {185--207},
+  journal = {Annual Review of Physical Chemistry}
+}
 @article{Kjaergaard_2020,
    title={Superconducting Qubits: Current State of Play},
    volume={11},
@@ -44,7 +97,7 @@
    title={A quantum engineer’s guide to superconducting qubits},
    volume={6},
    ISSN={1931-9401},
-   url={http://dx.doi.org/10.1063/1.5089550},
+   url={https://www.researchgate.net/publication/333832447_A_quantum_engineer%27s_guide_to_superconducting_qubits},
    DOI={10.1063/1.5089550},
    number={2},
    journal={Applied Physics Reviews},
