quantum dots: references from QH lecture.

--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -76,6 +76,20 @@
    month={May},
    pages={212–216}
 }
+@article{Elzerman_2004,
+   title={Single-shot read-out of an individual electron spin in a quantum dot},
+   author={Elzerman, J. M. and Hanson, R. and Willems van Beveren, L. H. and Witkamp, B. and Vandersypen, L. M. K. and Kouwenhoven, L. P.},
+   year={2004},
+   volume={430},
+   ISSN={1476-4687},
+   eprint={cond-mat/0411232},
+   DOI={10.1038/nature02693},
+   number={6998},
+   journal={Nature},
+   publisher={Springer Science and Business Media LLC},
+   month={Jul},
+   pages={431–435}
+}
 @article{Gambetta_2017,
    title={Building logical qubits in a superconducting quantum computing system},
    volume={3},
@@ -196,6 +210,19 @@
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevLett.115.250402},
   url = {https://link.aps.org/doi/10.1103/PhysRevLett.115.250402}
+}
+@article{Vandersypen_2004,
+   title={Real-time detection of single-electron tunneling using a quantum point contact},
+   author={Vandersypen, L. M. K. and Elzerman, J. M. and Schouten, R. N. and Willems van Beveren, L. H. and Hanson, R. and Kouwenhoven, L. P.},
+   volume={85},
+   ISSN={0003-6951},
+   eprint={cond-mat/0407121},
+   DOI={10.1063/1.1815041},
+   number={19},
+   journal={Applied Physics Letters},
+   publisher={AIP Publishing},
+   year={2004},
+   pages={4394}
 }
 @article{Weihs_1998,
   title = {Violation of Bell's Inequality under Strict Einstein Locality Conditions},
