Refined computing outline.

--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -196,6 +196,19 @@
   title = {Universal quantum logic in hot silicon qubits},
   journal = {Nature}
 }
+@article{Preskill_2018,
+  title = {Quantum {C}omputing in the {NISQ} era and beyond},
+  author = {Preskill, John},
+  year = {2018},
+  doi = {10.22331/q-2018-08-06-79},
+  eprint = {1801.00862v3},
+  journal = {{Quantum}},
+  issn = {2521-327X},
+  publisher = {{Verein zur F{\"{o}}rderung des Open Access Publizierens in den Quantenwissenschaften}},
+  volume = {2},
+  pages = {79},
+  month = aug
+}
 @article{Shalm_2015,
   title = {Strong Loophole-Free Test of Local Realism},
   author = {Shalm, Lynden K. and Meyer-Scott, Evan and Christensen, Bradley G. and others},
